fix: change scrollbar color

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -34,13 +34,13 @@ body {
 
 .custom-scrollbar::-webkit-scrollbar {
   width: 12px;
-  }
+}
   
-  .custom-scrollbar::-webkit-scrollbar-track {
-    background: transparent;
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
 }
 
 .custom-scrollbar {
   scrollbar-width: thin;
-  scrollbar-color: #f5f5f5 transparent;
+  scrollbar-color: #020526 transparent;
 }
